# IP4GP

./: offline_x_bar_all.txt  offline_x_gt_palm.txt  readme.md  surfaceFitting.py  x_bar_all.txt  x_gt_palm.txt  x_state_all.txt
EKF_V5/: Plot_plus.py  lhz_func.py  main.py  main_PN.py  main_getQR.py  qgFunc.py  test.py  test_IK_pose_in_ground_continue_arrived.py  urdfUpdater.py
In_hand_Program/: in_hand_v3bf.py  in_hand_v3bi.py  output.npy
One_Fin_Program/: err_oneFin_v3bi.txt
Tactile_EKF_Pose_estimation/: readme.md
Two_Fin_Program/: mul_fin_v3bi.py
UR5/: UR5_allegro_test(另一个复件).xml
ekf_V3s/: DTI_online_jeffrey_3_27.py  EKF_H.py  Plot_plus.py  README.md  config_param.py  ekf.py  ekf_GJ.py  fcl_python.py  finger_ctrl_func.py  forward_kinematics.py  func.py  func2.py  gd_data.txt  hand_tactile_servo_controller_TSVD_sep_2f_6j_lessgoal.py  ju_data.txt  mujoco_environment.py  object_geometry.py  offline_x_bar_all.txt  offline_x_gt_palm.txt  offline_x_state_all.txt  plotter.py  plotter_repeatEXP.py  qgFunc.py  robot_control.py  robot_control_GJ.py  tactile_allegro_mujo_const.py  tactile_heatmap.py  tactile_perception.py  tactile_plotter.py  test_Plot_plus.py  trans_component.py  u_data.txt  util_geometry.py  viz.py  x_data.txt
ekf_V3ss/: EKF_H.py  EKF_H_pn.py  config_param.py  ekf.py  forward_kinematics.py  object_geometry.py  robot_control.py  sig_filter.py  storeQR.py  tactile_allegro_mujo_const.py  tactile_perception.py  test.py  util_geometry.py
model/: cup_1.pcd
pcd2BVH/: CMakeLists.txt  greedy_projection.cpp
pcd_cut/: CMakeLists.txt  point_cut.cpp
(+304 files in other folders)
